# EasyTSAD

./: .gitignore  404.html  GlobalCfg.toml  GlobalConfig.toml  README.md  Readme.md  Summary.py  csv_sum.py  gen_site_table.py  index.html  main.py  objects.inv  process_rawdata.py  pyproject.toml  run.py
API/Evaluation/: index.html
API/Method/: index.html
API/Protocols/: index.html
API/Summary/: index.html
API/TSADController/: index.html
API/TSData/: index.html
Analysis/: Performance.py  Plot.py  __init__.py
Analysis/Evaluations/: AuprcPA.py  AurocPA.py  BestF1underPA.py  EvalInterface.py  EventDetect.py  EventF1PA.py  EventKthF1PA.py  EventKthPrcPA.py  EventPrcPA.py  EventRocPA.py  KthBestF1underPA.py  MetricBase.py  PotF1.py  __init__.py  utils.py
Controller/: GlobalCfg.toml  GlobalController.py  PathManager.py  TSADController.py  __init__.py
DataFactory/: LoadData.py  TSData.py  __init__.py
DataFactory/TorchDataSet/: PredictWindow.py  (+1 more)
EasyTSAD/: Summary.py  utils.py
Evaluations/: Performance.py  __init__.py  utils.py
Exptools/: __init__.py
Method/: MethodInterface.py
Methods/: __init__.py
Mkdocs/: mkdocs.yml
Pipeline/: RunAllinOne.py  RunBase.py  RunOnebyOne.py  RunTransInDataset.py  __init__.py
Plots/: plot.py
Statistics/: __init__.py  config.toml  geneCSV.py  genePlots.py
TrainingSchema/: AllInOne.py  BaseSchema.py  OneByOne.py  ZeroShot.py
scripts/: analysis.sh  analysis_all.sh  geneTODS.sh  run.sh  summary_all.sh
search/: search_index.json
utils/: plot_all.py  process_rawdata.py  result_to_csv.py  spot.py  util.py
(+252 files in other folders)
